// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flyout component Renders flyout component 1`] = `
<SearchRelevanceContextProvider>
  <SearchConfig
    dataSourceEnabled={false}
    pipeline=""
    queryError={
      Object {
        "errorResponse": Object {
          "body": "",
          "statusCode": 200,
        },
        "queryString": "",
        "selectIndex": "",
      }
    }
    queryNumber={1}
    queryString="{}"
    selectedIndex=""
    setPipeline={
      [MockFunction] {
        "calls": Array [
          Array [
            "",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    setQueryError={[MockFunction]}
    setQueryString={[MockFunction]}
    setSelectedIndex={
      [MockFunction] {
        "calls": Array [
          Array [
            "",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <EuiTitle
      size="xs"
    >
      <h2
        className="euiTitle euiTitle--xsmall"
        style={
          Object {
            "fontSize": "21px",
            "fontWeight": "300",
          }
        }
      >
        Query 
        1
      </h2>
    </EuiTitle>
    <EuiSpacer
      size="m"
    >
      <div
        className="euiSpacer euiSpacer--m"
      />
    </EuiSpacer>
    <EuiFlexGroup>
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem>
          <div
            className="euiFlexItem"
          >
            <EuiCompressedFormRow
              describedByIds={Array []}
              display="rowCompressed"
              error={false}
              fullWidth={true}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              isInvalid={false}
              label="Index"
              labelType="label"
            >
              <div
                className="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
                id="random_html_id-row"
              >
                <div
                  className="euiFormRow__labelWrapper"
                >
                  <EuiFormLabel
                    aria-invalid={false}
                    className="euiFormRow__label"
                    htmlFor="random_html_id"
                    isFocused={false}
                    isInvalid={false}
                    type="label"
                  >
                    <label
                      aria-invalid={false}
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="random_html_id"
                    >
                      Index
                    </label>
                  </EuiFormLabel>
                </div>
                <div
                  className="euiFormRow__fieldWrapper"
                >
                  <EuiCompressedSelect
                    aria-label="Search Index"
                    hasNoInitialSelection={true}
                    id="random_html_id"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    options={Array []}
                    value=""
                  >
                    <EuiSelect
                      aria-label="Search Index"
                      compressed={true}
                      hasNoInitialSelection={true}
                      id="random_html_id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      options={Array []}
                      value=""
                    >
                      <EuiFormControlLayout
                        compressed={true}
                        fullWidth={false}
                        icon={
                          Object {
                            "side": "right",
                            "type": "arrowDown",
                          }
                        }
                        inputId="random_html_id"
                        isLoading={false}
                      >
                        <div
                          className="euiFormControlLayout euiFormControlLayout--compressed"
                        >
                          <div
                            className="euiFormControlLayout__childrenWrapper"
                          >
                            <EuiValidatableControl>
                              <select
                                aria-label="Search Index"
                                className="euiSelect euiSelect--compressed"
                                id="random_html_id"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                onMouseUp={[Function]}
                                value=""
                              >
                                <option
                                  disabled={true}
                                  hidden={true}
                                  style={
                                    Object {
                                      "display": "none",
                                    }
                                  }
                                  value=""
                                >
                                   
                                </option>
                              </select>
                            </EuiValidatableControl>
                            <EuiFormControlLayoutIcons
                              compressed={true}
                              icon={
                                Object {
                                  "side": "right",
                                  "type": "arrowDown",
                                }
                              }
                              isLoading={false}
                            >
                              <div
                                className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                              >
                                <EuiFormControlLayoutCustomIcon
                                  size="s"
                                  type="arrowDown"
                                >
                                  <span
                                    className="euiFormControlLayoutCustomIcon"
                                  >
                                    <EuiIcon
                                      aria-hidden="true"
                                      className="euiFormControlLayoutCustomIcon__icon"
                                      size="s"
                                      type="arrowDown"
                                    >
                                      <EuiIconArrowDown
                                        aria-hidden={true}
                                        className="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                                        focusable="false"
                                        role="img"
                                        style={null}
                                      >
                                        <svg
                                          aria-hidden={true}
                                          className="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                                          focusable="false"
                                          height={16}
                                          role="img"
                                          style={null}
                                          viewBox="0 0 16 16"
                                          width={16}
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                            fillRule="non-zero"
                                          />
                                        </svg>
                                      </EuiIconArrowDown>
                                    </EuiIcon>
                                  </span>
                                </EuiFormControlLayoutCustomIcon>
                              </div>
                            </EuiFormControlLayoutIcons>
                          </div>
                        </div>
                      </EuiFormControlLayout>
                    </EuiSelect>
                  </EuiCompressedSelect>
                </div>
              </div>
            </EuiCompressedFormRow>
          </div>
        </EuiFlexItem>
        <EuiFlexItem>
          <div
            className="euiFlexItem"
          >
            <EuiCompressedFormRow
              describedByIds={Array []}
              display="rowCompressed"
              fullWidth={true}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              label={
                <p>
                  Pipeline 
                  <i>
                     - optional 
                  </i>
                </p>
              }
              labelType="label"
            >
              <div
                className="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
                id="random_html_id-row"
              >
                <div
                  className="euiFormRow__labelWrapper"
                >
                  <EuiFormLabel
                    className="euiFormRow__label"
                    htmlFor="random_html_id"
                    isFocused={false}
                    type="label"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="random_html_id"
                    >
                      <p>
                        Pipeline 
                        <i>
                           - optional 
                        </i>
                      </p>
                    </label>
                  </EuiFormLabel>
                </div>
                <div
                  className="euiFormRow__fieldWrapper"
                >
                  <EuiCompressedComboBox
                    async={false}
                    compressed={true}
                    fullWidth={false}
                    id="random_html_id"
                    isClearable={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    options={
                      Array [
                        Object {
                          "label": "_none",
                        },
                      ]
                    }
                    placeholder=""
                    selectedOptions={Array []}
                    singleSelection={
                      Object {
                        "asPlainText": true,
                      }
                    }
                    sortMatchesBy="none"
                  >
                    <div
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      className="euiComboBox euiComboBox--compressed"
                      onKeyDown={[Function]}
                      role="combobox"
                    >
                      <EuiComboBoxInput
                        autoSizeInputRef={[Function]}
                        compressed={true}
                        fullWidth={false}
                        hasSelectedOptions={false}
                        id="random_html_id"
                        inputRef={[Function]}
                        isListOpen={false}
                        noIcon={false}
                        onChange={[Function]}
                        onClear={[Function]}
                        onClick={[Function]}
                        onCloseListClick={[Function]}
                        onFocus={[Function]}
                        onOpenListClick={[Function]}
                        onRemoveOption={[Function]}
                        placeholder=""
                        rootId={[Function]}
                        searchValue=""
                        selectedOptions={Array []}
                        singleSelection={
                          Object {
                            "asPlainText": true,
                          }
                        }
                        toggleButtonRef={[Function]}
                        updatePosition={[Function]}
                        value=""
                      >
                        <EuiFormControlLayout
                          compressed={true}
                          fullWidth={false}
                          icon={
                            Object {
                              "aria-label": "Open list of options",
                              "data-test-subj": "comboBoxToggleListButton",
                              "disabled": undefined,
                              "onClick": [Function],
                              "ref": [Function],
                              "side": "right",
                              "type": "arrowDown",
                            }
                          }
                        >
                          <div
                            className="euiFormControlLayout euiFormControlLayout--compressed"
                          >
                            <div
                              className="euiFormControlLayout__childrenWrapper"
                            >
                              <div
                                className="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isClearable"
                                data-test-subj="comboBoxInput"
                                onClick={[Function]}
                                tabIndex={-1}
                              >
                                <AutosizeInput
                                  aria-controls=""
                                  className="euiComboBox__input"
                                  data-test-subj="comboBoxSearchInput"
                                  id="random_html_id"
                                  injectStyles={true}
                                  inputRef={[Function]}
                                  minWidth={1}
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  role="textbox"
                                  style={
                                    Object {
                                      "fontSize": 14,
                                    }
                                  }
                                  value=""
                                >
                                  <div
                                    className="euiComboBox__input"
                                    style={
                                      Object {
                                        "display": "inline-block",
                                        "fontSize": 14,
                                      }
                                    }
                                  >
                                    <input
                                      aria-controls=""
                                      data-test-subj="comboBoxSearchInput"
                                      id="random_html_id"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onFocus={[Function]}
                                      role="textbox"
                                      style={
                                        Object {
                                          "boxSizing": "content-box",
                                          "width": "2px",
                                        }
                                      }
                                      value=""
                                    />
                                    <div
                                      style={
                                        Object {
                                          "height": 0,
                                          "left": 0,
                                          "overflow": "scroll",
                                          "position": "absolute",
                                          "top": 0,
                                          "visibility": "hidden",
                                          "whiteSpace": "pre",
                                        }
                                      }
                                    />
                                  </div>
                                </AutosizeInput>
                              </div>
                              <EuiFormControlLayoutIcons
                                compressed={true}
                                icon={
                                  Object {
                                    "aria-label": "Open list of options",
                                    "data-test-subj": "comboBoxToggleListButton",
                                    "disabled": undefined,
                                    "onClick": [Function],
                                    "ref": [Function],
                                    "side": "right",
                                    "type": "arrowDown",
                                  }
                                }
                              >
                                <div
                                  className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                                >
                                  <EuiFormControlLayoutCustomIcon
                                    aria-label="Open list of options"
                                    data-test-subj="comboBoxToggleListButton"
                                    iconRef={[Function]}
                                    onClick={[Function]}
                                    size="s"
                                    type="arrowDown"
                                  >
                                    <button
                                      aria-label="Open list of options"
                                      className="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                                      data-test-subj="comboBoxToggleListButton"
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      <EuiIcon
                                        aria-hidden="true"
                                        className="euiFormControlLayoutCustomIcon__icon"
                                        size="s"
                                        type="arrowDown"
                                      >
                                        <EuiIconArrowDown
                                          aria-hidden={true}
                                          className="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                                          focusable="false"
                                          role="img"
                                          style={null}
                                        >
                                          <svg
                                            aria-hidden={true}
                                            className="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                                            focusable="false"
                                            height={16}
                                            role="img"
                                            style={null}
                                            viewBox="0 0 16 16"
                                            width={16}
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                              fillRule="non-zero"
                                            />
                                          </svg>
                                        </EuiIconArrowDown>
                                      </EuiIcon>
                                    </button>
                                  </EuiFormControlLayoutCustomIcon>
                                </div>
                              </EuiFormControlLayoutIcons>
                            </div>
                          </div>
                        </EuiFormControlLayout>
                      </EuiComboBoxInput>
                    </div>
                  </EuiCompressedComboBox>
                </div>
              </div>
            </EuiCompressedFormRow>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
    <EuiCompressedFormRow
      describedByIds={Array []}
      display="rowCompressed"
      error={false}
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      helpText={
        <p>
          Enter a query in
           
          <a
            href="https://opensearch.org/docs/latest/query-dsl/index/"
          >
            OpenSearch Query DSL
          </a>
          . Use %SearchText% to refer to the text in the search bar
        </p>
      }
      isInvalid={false}
      label="Query"
      labelAppend={
        <EuiText
          size="xs"
        >
          <EuiButtonEmpty
            color="primary"
            onClick={[Function]}
            size="xs"
          >
            Help
          </EuiButtonEmpty>
        </EuiText>
      }
      labelType="label"
    >
      <div
        className="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <EuiFormLabel
            aria-invalid={false}
            className="euiFormRow__label"
            htmlFor="random_html_id"
            isFocused={false}
            isInvalid={false}
            type="label"
          >
            <label
              aria-invalid={false}
              className="euiFormLabel euiFormRow__label"
              htmlFor="random_html_id"
            >
              Query
            </label>
          </EuiFormLabel>
           
          <EuiText
            size="xs"
          >
            <div
              className="euiText euiText--extraSmall"
            >
              <EuiButtonEmpty
                color="primary"
                onClick={[Function]}
                size="xs"
              >
                <button
                  className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <EuiButtonContent
                    className="euiButtonEmpty__content"
                    iconGap="m"
                    iconSide="left"
                    iconSize="s"
                    textProps={
                      Object {
                        "className": "euiButtonEmpty__text",
                      }
                    }
                  >
                    <span
                      className="euiButtonContent euiButtonEmpty__content"
                    >
                      <span
                        className="euiButtonEmpty__text"
                      >
                        Help
                      </span>
                    </span>
                  </EuiButtonContent>
                </button>
              </EuiButtonEmpty>
            </div>
          </EuiText>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <EuiCodeEditor
            aria-describedby="random_html_id-help-0"
            aria-label="Code Editor"
            height="10rem"
            id="random_html_id"
            mode="json"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            setOptions={
              Object {
                "enableBasicAutocompletion": true,
                "enableLiveAutocompletion": true,
                "fontSize": "14px",
              }
            }
            showPrintMargin={false}
            tabSize={2}
            theme="textmate"
            value="{}"
            width="100%"
          >
            <div
              className="euiCodeEditorWrapper"
              data-test-subj="codeEditorContainer"
              style={
                Object {
                  "height": "10rem",
                  "width": "100%",
                }
              }
            >
              <button
                className="euiCodeEditorKeyboardHint"
                data-test-subj="codeEditorHint"
                id="random_html_id"
                onClick={[Function]}
              >
                <p
                  className="euiText"
                >
                  <EuiI18n
                    default="Press Enter to start editing."
                    token="euiCodeEditor.startEditing"
                  >
                    Press Enter to start editing.
                  </EuiI18n>
                </p>
                <p
                  className="euiText"
                >
                  <EuiI18n
                    default="When you're done, press Escape to stop editing."
                    token="euiCodeEditor.stopEditing"
                  >
                    When you're done, press Escape to stop editing.
                  </EuiI18n>
                </p>
              </button>
              <ReactAce
                aria-describedby="random_html_id-help-0"
                aria-label="Code Editor"
                commands={
                  Array [
                    Object {
                      "bindKey": Object {
                        "mac": "Esc",
                        "win": "Esc",
                      },
                      "exec": [Function],
                      "name": "stopEditingOnEsc",
                    },
                  ]
                }
                cursorStart={1}
                editorProps={
                  Object {
                    "$blockScrolling": Infinity,
                  }
                }
                enableBasicAutocompletion={false}
                enableLiveAutocompletion={false}
                enableSnippets={false}
                focus={false}
                fontSize={12}
                height="10rem"
                highlightActiveLine={true}
                id="random_html_id"
                maxLines={null}
                minLines={null}
                mode="json"
                name="random_html_id"
                navigateToFileEnd={true}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onLoad={null}
                onPaste={null}
                onScroll={null}
                placeholder={null}
                readOnly={false}
                scrollMargin={
                  Array [
                    0,
                    0,
                    0,
                    0,
                  ]
                }
                setOptions={
                  Object {
                    "enableBasicAutocompletion": true,
                    "enableLiveAutocompletion": true,
                    "fontSize": "14px",
                  }
                }
                showGutter={true}
                showPrintMargin={false}
                style={Object {}}
                tabSize={2}
                theme="textmate"
                value="{}"
                width="100%"
                wrapEnabled={false}
              >
                <div
                  id="random_html_id"
                  style={
                    Object {
                      "height": "10rem",
                      "width": "100%",
                    }
                  }
                />
              </ReactAce>
            </div>
          </EuiCodeEditor>
          <EuiFormHelpText
            className="euiFormRow__text"
            id="random_html_id-help-0"
            key="0"
          >
            <div
              className="euiFormHelpText euiFormRow__text"
              id="random_html_id-help-0"
            >
              <p>
                Enter a query in
                 
                <a
                  href="https://opensearch.org/docs/latest/query-dsl/index/"
                >
                  OpenSearch Query DSL
                </a>
                . Use %SearchText% to refer to the text in the search bar
              </p>
            </div>
          </EuiFormHelpText>
        </div>
      </div>
    </EuiCompressedFormRow>
  </SearchConfig>
</SearchRelevanceContextProvider>
`;

exports[`Flyout component Renders flyout component when multi-datasource is enabled 1`] = `
<SearchRelevanceContextProvider>
  <SearchConfig
    dataSourceManagement={
      Object {
        "ui": Object {
          "DataSourceSelector": <React.Fragment />,
        },
      }
    }
    pipeline=""
    queryError={
      Object {
        "errorResponse": Object {
          "body": "",
          "statusCode": 200,
        },
        "queryString": "",
        "selectIndex": "",
      }
    }
    queryNumber={1}
    queryString="{}"
    selectedIndex=""
    setPipeline={
      [MockFunction] {
        "calls": Array [
          Array [
            "",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    setQueryError={[MockFunction]}
    setQueryString={[MockFunction]}
    setSelectedIndex={
      [MockFunction] {
        "calls": Array [
          Array [
            "",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <EuiTitle
      size="xs"
    >
      <h2
        className="euiTitle euiTitle--xsmall"
        style={
          Object {
            "fontSize": "21px",
            "fontWeight": "300",
          }
        }
      >
        Query 
        1
      </h2>
    </EuiTitle>
    <EuiSpacer
      size="m"
    >
      <div
        className="euiSpacer euiSpacer--m"
      />
    </EuiSpacer>
    <EuiFlexGroup>
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem>
          <div
            className="euiFlexItem"
          >
            <EuiCompressedFormRow
              describedByIds={Array []}
              display="rowCompressed"
              error={false}
              fullWidth={true}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              isInvalid={false}
              label="Index"
              labelType="label"
            >
              <div
                className="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
                id="random_html_id-row"
              >
                <div
                  className="euiFormRow__labelWrapper"
                >
                  <EuiFormLabel
                    aria-invalid={false}
                    className="euiFormRow__label"
                    htmlFor="random_html_id"
                    isFocused={false}
                    isInvalid={false}
                    type="label"
                  >
                    <label
                      aria-invalid={false}
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="random_html_id"
                    >
                      Index
                    </label>
                  </EuiFormLabel>
                </div>
                <div
                  className="euiFormRow__fieldWrapper"
                >
                  <EuiCompressedSelect
                    aria-label="Search Index"
                    hasNoInitialSelection={true}
                    id="random_html_id"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    options={Array []}
                    value=""
                  >
                    <EuiSelect
                      aria-label="Search Index"
                      compressed={true}
                      hasNoInitialSelection={true}
                      id="random_html_id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      options={Array []}
                      value=""
                    >
                      <EuiFormControlLayout
                        compressed={true}
                        fullWidth={false}
                        icon={
                          Object {
                            "side": "right",
                            "type": "arrowDown",
                          }
                        }
                        inputId="random_html_id"
                        isLoading={false}
                      >
                        <div
                          className="euiFormControlLayout euiFormControlLayout--compressed"
                        >
                          <div
                            className="euiFormControlLayout__childrenWrapper"
                          >
                            <EuiValidatableControl>
                              <select
                                aria-label="Search Index"
                                className="euiSelect euiSelect--compressed"
                                id="random_html_id"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                onMouseUp={[Function]}
                                value=""
                              >
                                <option
                                  disabled={true}
                                  hidden={true}
                                  style={
                                    Object {
                                      "display": "none",
                                    }
                                  }
                                  value=""
                                >
                                   
                                </option>
                              </select>
                            </EuiValidatableControl>
                            <EuiFormControlLayoutIcons
                              compressed={true}
                              icon={
                                Object {
                                  "side": "right",
                                  "type": "arrowDown",
                                }
                              }
                              isLoading={false}
                            >
                              <div
                                className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                              >
                                <EuiFormControlLayoutCustomIcon
                                  size="s"
                                  type="arrowDown"
                                >
                                  <span
                                    className="euiFormControlLayoutCustomIcon"
                                  >
                                    <EuiIcon
                                      aria-hidden="true"
                                      className="euiFormControlLayoutCustomIcon__icon"
                                      size="s"
                                      type="arrowDown"
                                    >
                                      <EuiIconBeaker
                                        aria-hidden={true}
                                        className="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                        focusable="false"
                                        role="img"
                                        style={null}
                                      >
                                        <svg
                                          aria-hidden={true}
                                          className="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                          focusable="false"
                                          height={16}
                                          role="img"
                                          style={null}
                                          viewBox="0 0 16 16"
                                          width={16}
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                          />
                                        </svg>
                                      </EuiIconBeaker>
                                    </EuiIcon>
                                  </span>
                                </EuiFormControlLayoutCustomIcon>
                              </div>
                            </EuiFormControlLayoutIcons>
                          </div>
                        </div>
                      </EuiFormControlLayout>
                    </EuiSelect>
                  </EuiCompressedSelect>
                </div>
              </div>
            </EuiCompressedFormRow>
          </div>
        </EuiFlexItem>
        <EuiFlexItem>
          <div
            className="euiFlexItem"
          >
            <EuiCompressedFormRow
              describedByIds={Array []}
              display="rowCompressed"
              fullWidth={true}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              label={
                <p>
                  Pipeline 
                  <i>
                     - optional 
                  </i>
                </p>
              }
              labelType="label"
            >
              <div
                className="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
                id="random_html_id-row"
              >
                <div
                  className="euiFormRow__labelWrapper"
                >
                  <EuiFormLabel
                    className="euiFormRow__label"
                    htmlFor="random_html_id"
                    isFocused={false}
                    type="label"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="random_html_id"
                    >
                      <p>
                        Pipeline 
                        <i>
                           - optional 
                        </i>
                      </p>
                    </label>
                  </EuiFormLabel>
                </div>
                <div
                  className="euiFormRow__fieldWrapper"
                >
                  <EuiCompressedComboBox
                    async={false}
                    compressed={true}
                    fullWidth={false}
                    id="random_html_id"
                    isClearable={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    options={
                      Array [
                        Object {
                          "label": "_none",
                        },
                      ]
                    }
                    placeholder=""
                    selectedOptions={Array []}
                    singleSelection={
                      Object {
                        "asPlainText": true,
                      }
                    }
                    sortMatchesBy="none"
                  >
                    <div
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      className="euiComboBox euiComboBox--compressed"
                      onKeyDown={[Function]}
                      role="combobox"
                    >
                      <EuiComboBoxInput
                        autoSizeInputRef={[Function]}
                        compressed={true}
                        fullWidth={false}
                        hasSelectedOptions={false}
                        id="random_html_id"
                        inputRef={[Function]}
                        isListOpen={false}
                        noIcon={false}
                        onChange={[Function]}
                        onClear={[Function]}
                        onClick={[Function]}
                        onCloseListClick={[Function]}
                        onFocus={[Function]}
                        onOpenListClick={[Function]}
                        onRemoveOption={[Function]}
                        placeholder=""
                        rootId={[Function]}
                        searchValue=""
                        selectedOptions={Array []}
                        singleSelection={
                          Object {
                            "asPlainText": true,
                          }
                        }
                        toggleButtonRef={[Function]}
                        updatePosition={[Function]}
                        value=""
                      >
                        <EuiFormControlLayout
                          compressed={true}
                          fullWidth={false}
                          icon={
                            Object {
                              "aria-label": "Open list of options",
                              "data-test-subj": "comboBoxToggleListButton",
                              "disabled": undefined,
                              "onClick": [Function],
                              "ref": [Function],
                              "side": "right",
                              "type": "arrowDown",
                            }
                          }
                        >
                          <div
                            className="euiFormControlLayout euiFormControlLayout--compressed"
                          >
                            <div
                              className="euiFormControlLayout__childrenWrapper"
                            >
                              <div
                                className="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isClearable"
                                data-test-subj="comboBoxInput"
                                onClick={[Function]}
                                tabIndex={-1}
                              >
                                <AutosizeInput
                                  aria-controls=""
                                  className="euiComboBox__input"
                                  data-test-subj="comboBoxSearchInput"
                                  id="random_html_id"
                                  injectStyles={true}
                                  inputRef={[Function]}
                                  minWidth={1}
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  role="textbox"
                                  style={
                                    Object {
                                      "fontSize": 14,
                                    }
                                  }
                                  value=""
                                >
                                  <div
                                    className="euiComboBox__input"
                                    style={
                                      Object {
                                        "display": "inline-block",
                                        "fontSize": 14,
                                      }
                                    }
                                  >
                                    <input
                                      aria-controls=""
                                      data-test-subj="comboBoxSearchInput"
                                      id="random_html_id"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onFocus={[Function]}
                                      role="textbox"
                                      style={
                                        Object {
                                          "boxSizing": "content-box",
                                          "width": "2px",
                                        }
                                      }
                                      value=""
                                    />
                                    <div
                                      style={
                                        Object {
                                          "height": 0,
                                          "left": 0,
                                          "overflow": "scroll",
                                          "position": "absolute",
                                          "top": 0,
                                          "visibility": "hidden",
                                          "whiteSpace": "pre",
                                        }
                                      }
                                    />
                                  </div>
                                </AutosizeInput>
                              </div>
                              <EuiFormControlLayoutIcons
                                compressed={true}
                                icon={
                                  Object {
                                    "aria-label": "Open list of options",
                                    "data-test-subj": "comboBoxToggleListButton",
                                    "disabled": undefined,
                                    "onClick": [Function],
                                    "ref": [Function],
                                    "side": "right",
                                    "type": "arrowDown",
                                  }
                                }
                              >
                                <div
                                  className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                                >
                                  <EuiFormControlLayoutCustomIcon
                                    aria-label="Open list of options"
                                    data-test-subj="comboBoxToggleListButton"
                                    iconRef={[Function]}
                                    onClick={[Function]}
                                    size="s"
                                    type="arrowDown"
                                  >
                                    <button
                                      aria-label="Open list of options"
                                      className="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                                      data-test-subj="comboBoxToggleListButton"
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      <EuiIcon
                                        aria-hidden="true"
                                        className="euiFormControlLayoutCustomIcon__icon"
                                        size="s"
                                        type="arrowDown"
                                      >
                                        <EuiIconBeaker
                                          aria-hidden={true}
                                          className="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                          focusable="false"
                                          role="img"
                                          style={null}
                                        >
                                          <svg
                                            aria-hidden={true}
                                            className="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                            focusable="false"
                                            height={16}
                                            role="img"
                                            style={null}
                                            viewBox="0 0 16 16"
                                            width={16}
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                            />
                                          </svg>
                                        </EuiIconBeaker>
                                      </EuiIcon>
                                    </button>
                                  </EuiFormControlLayoutCustomIcon>
                                </div>
                              </EuiFormControlLayoutIcons>
                            </div>
                          </div>
                        </EuiFormControlLayout>
                      </EuiComboBoxInput>
                    </div>
                  </EuiCompressedComboBox>
                </div>
              </div>
            </EuiCompressedFormRow>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
    <EuiCompressedFormRow
      describedByIds={Array []}
      display="rowCompressed"
      error={false}
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      helpText={
        <p>
          Enter a query in
           
          <a
            href="https://opensearch.org/docs/latest/query-dsl/index/"
          >
            OpenSearch Query DSL
          </a>
          . Use %SearchText% to refer to the text in the search bar
        </p>
      }
      isInvalid={false}
      label="Query"
      labelAppend={
        <EuiText
          size="xs"
        >
          <EuiButtonEmpty
            color="primary"
            onClick={[Function]}
            size="xs"
          >
            Help
          </EuiButtonEmpty>
        </EuiText>
      }
      labelType="label"
    >
      <div
        className="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <EuiFormLabel
            aria-invalid={false}
            className="euiFormRow__label"
            htmlFor="random_html_id"
            isFocused={false}
            isInvalid={false}
            type="label"
          >
            <label
              aria-invalid={false}
              className="euiFormLabel euiFormRow__label"
              htmlFor="random_html_id"
            >
              Query
            </label>
          </EuiFormLabel>
           
          <EuiText
            size="xs"
          >
            <div
              className="euiText euiText--extraSmall"
            >
              <EuiButtonEmpty
                color="primary"
                onClick={[Function]}
                size="xs"
              >
                <button
                  className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <EuiButtonContent
                    className="euiButtonEmpty__content"
                    iconGap="m"
                    iconSide="left"
                    iconSize="s"
                    textProps={
                      Object {
                        "className": "euiButtonEmpty__text",
                      }
                    }
                  >
                    <span
                      className="euiButtonContent euiButtonEmpty__content"
                    >
                      <span
                        className="euiButtonEmpty__text"
                      >
                        Help
                      </span>
                    </span>
                  </EuiButtonContent>
                </button>
              </EuiButtonEmpty>
            </div>
          </EuiText>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <EuiCodeEditor
            aria-describedby="random_html_id-help-0"
            aria-label="Code Editor"
            height="10rem"
            id="random_html_id"
            mode="json"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            setOptions={
              Object {
                "enableBasicAutocompletion": true,
                "enableLiveAutocompletion": true,
                "fontSize": "14px",
              }
            }
            showPrintMargin={false}
            tabSize={2}
            theme="textmate"
            value="{}"
            width="100%"
          >
            <div
              className="euiCodeEditorWrapper"
              data-test-subj="codeEditorContainer"
              style={
                Object {
                  "height": "10rem",
                  "width": "100%",
                }
              }
            >
              <button
                className="euiCodeEditorKeyboardHint"
                data-test-subj="codeEditorHint"
                id="random_html_id"
                onClick={[Function]}
              >
                <p
                  className="euiText"
                >
                  <EuiI18n
                    default="Press Enter to start editing."
                    token="euiCodeEditor.startEditing"
                  >
                    Press Enter to start editing.
                  </EuiI18n>
                </p>
                <p
                  className="euiText"
                >
                  <EuiI18n
                    default="When you're done, press Escape to stop editing."
                    token="euiCodeEditor.stopEditing"
                  >
                    When you're done, press Escape to stop editing.
                  </EuiI18n>
                </p>
              </button>
              <ReactAce
                aria-describedby="random_html_id-help-0"
                aria-label="Code Editor"
                commands={
                  Array [
                    Object {
                      "bindKey": Object {
                        "mac": "Esc",
                        "win": "Esc",
                      },
                      "exec": [Function],
                      "name": "stopEditingOnEsc",
                    },
                  ]
                }
                cursorStart={1}
                editorProps={
                  Object {
                    "$blockScrolling": Infinity,
                  }
                }
                enableBasicAutocompletion={false}
                enableLiveAutocompletion={false}
                enableSnippets={false}
                focus={false}
                fontSize={12}
                height="10rem"
                highlightActiveLine={true}
                id="random_html_id"
                maxLines={null}
                minLines={null}
                mode="json"
                name="random_html_id"
                navigateToFileEnd={true}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onLoad={null}
                onPaste={null}
                onScroll={null}
                placeholder={null}
                readOnly={false}
                scrollMargin={
                  Array [
                    0,
                    0,
                    0,
                    0,
                  ]
                }
                setOptions={
                  Object {
                    "enableBasicAutocompletion": true,
                    "enableLiveAutocompletion": true,
                    "fontSize": "14px",
                  }
                }
                showGutter={true}
                showPrintMargin={false}
                style={Object {}}
                tabSize={2}
                theme="textmate"
                value="{}"
                width="100%"
                wrapEnabled={false}
              >
                <div
                  id="random_html_id"
                  style={
                    Object {
                      "height": "10rem",
                      "width": "100%",
                    }
                  }
                />
              </ReactAce>
            </div>
          </EuiCodeEditor>
          <EuiFormHelpText
            className="euiFormRow__text"
            id="random_html_id-help-0"
            key="0"
          >
            <div
              className="euiFormHelpText euiFormRow__text"
              id="random_html_id-help-0"
            >
              <p>
                Enter a query in
                 
                <a
                  href="https://opensearch.org/docs/latest/query-dsl/index/"
                >
                  OpenSearch Query DSL
                </a>
                . Use %SearchText% to refer to the text in the search bar
              </p>
            </div>
          </EuiFormHelpText>
        </div>
      </div>
    </EuiCompressedFormRow>
  </SearchConfig>
</SearchRelevanceContextProvider>
`;
